fix arrow alignment problem for listADTCON slideshow

--- a/AV/Development/listADTCON.css
+++ b/AV/Development/listADTCON.css
@@ -8,3 +8,6 @@
   font-size: 20px;
   min-width: 65px;
 }
+.jsavcanvas{
+  width: 850px;
+}
